# torch_hand_classifier

./: .gitignore  README.md
test/: CMakeLists.txt  main.cpp
train/: _step1_train.py  _step2_test.py  _step3_cvt.py  _step4_onnx_infer.py  _step5_caffe2_infer.py  predict_net.pb  squeezenet.onnx
train/data/: dataset.py
train/network/: __init__.py  mobilenet_v1.py  mobilenet_v2.py  resnet.py  squeezenet.py
train/utils/: Tester.py  Trainer.py
